# indico-pi-affiliation-ror

./: .gitignore  README.md  pyproject.toml  webpack-bundles.json
indico_pi_affiliation_ror/: plugin.py  ror.py
indico_pi_affiliation_ror/client/: RORInput.jsx  index.js  main.scss
pi_affiliation_ror/: __init__.py  blueprint.py  plugin.py
pi_affiliation_ror/client/: index.js  main.scss
pi_affiliation_ror/client/forms/fields/: RORInput.jsx
pi_affiliation_ror/fields/: ror.py
